--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,28 +1,30 @@
 {% set name = "hepdata-validator" %}
 {% set version = "0.3.5" %}
+{% set python_min = "3.6" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/hepdata_validator-{{ version }}.tar.gz
+  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/hepdata_validator-{{ version }}.tar.gz
   sha256: d93a23e4eeb41df03011494482b619ac59088f13054bd389718111d135f2ab10
 
 build:
   entry_points:
     - hepdata-validate=hepdata_validator.cli:validate
   noarch: python
-  script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
-  number: 0
+  script: {{ PYTHON }} -m pip install . -vv
+  number: 1
 
 requirements:
   host:
-    - python >=3.6
+    - python {{ python_min }}
+    - setuptools
     - pytest
     - pip
   run:
-    - python >=3.6
+    - python >={{ python_min }}
     - click
     - jsonschema
     - packaging
@@ -36,6 +38,7 @@ test:
     - pip check
     - hepdata-validate --help
   requires:
+    - python {{ python_min }}
     - pip
 
 about:
